[package]
name = "pyth-sdk-cw"
version = "1.2.1"
authors = ["Pyth Data Foundation"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://pyth.network"
repository = "https://github.com/pyth-network/pyth-crosschain"
description = "Data structures and utilites for the Pyth price oracle"
keywords = [ "pyth", "oracle", "cosmwasm" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
osmosis=[]

[dependencies]
pyth-sdk = "0.7.0"
cosmwasm-std = { git = "https://github.com/Levana-Protocol/cosmwasm.git", rev = "6e1fbb12982d02f8ff3f1a291de60d423143c7f1" }
cosmwasm-schema = "2.0.2"
thiserror = "1.0.20"
